2011-09-08  Oliver Hunt  <oliver@apple.com>

        Use bump allocator for initial property storage
        https://bugs.webkit.org/show_bug.cgi?id=67494

        Reviewed by Geoffrey Garen.

        Add a forwarding header.

        * ForwardingHeaders/runtime/StorageBarrier.h: Added.

2011-09-08  Roland Steiner  <rolandsteiner@chromium.org>

        Unreviewed, rolling out r94809.
        http://trac.webkit.org/changeset/94809
        https://bugs.webkit.org/show_bug.cgi?id=67718

        commit _still_ premature, despite CQ eagerness

        * html/HTMLAttributeNames.in:
        * html/HTMLStyleElement.cpp:
        * html/HTMLStyleElement.h:
        * html/HTMLStyleElement.idl:

2011-09-08  Sam Weinig  <sam@webkit.org>

        Remove the Completion object from JSC, I have never liked it
        https://bugs.webkit.org/show_bug.cgi?id=67755

        Reviewed by Gavin Barraclough.

        * bindings/js/JSDOMBinding.cpp:
        (WebCore::reportException):
        * bindings/js/JSEventListener.cpp:
        (WebCore::JSEventListener::handleEvent):
        * bindings/js/JSInjectedScriptManager.cpp:
        (WebCore::InjectedScriptManager::createInjectedScript):
        * bindings/js/JSMainThreadExecState.h:
        (WebCore::JSMainThreadExecState::evaluate):
        * bindings/js/ScriptController.cpp:
        (WebCore::ScriptController::evaluateInWorld):
        * bindings/js/WorkerScriptController.cpp:
        (WebCore::WorkerScriptController::evaluate):
        * bindings/objc/WebScriptObject.mm:
        (-[WebScriptObject evaluateWebScript:]):
        * bridge/NP_jsobject.cpp:
        (_NPN_Evaluate):
        * bridge/jni/jni_jsobject.mm:
        (JavaJSObject::eval):

2011-09-08  Adam Barth  <abarth@webkit.org>

        Inline DocumentWriter::encoding() into it's only caller: deprecatedFrameEncoding()
        https://bugs.webkit.org/show_bug.cgi?id=67807

        Reviewed by Eric Seidel.
