@@ -1,3 +1,9 @@
+2011-09-08  Adam Barth  <abarth@webkit.org>
+
+        Second attempt to fix Chromium build.
+
+        * dom/Document.h:
+
 2011-09-08  Oliver Hunt  <oliver@apple.com>
 
         Use bump allocator for initial property storage
